# ChIPseeqer

./: .gitattributes  CODE_OF_CONDUCT.md  INSTALL.Debian  INSTALL.Fedora  INSTALL.Ubuntu  LICENSE  README.md
tools/FIRE/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  fire.pl  fire_gapped.pl  install-pcre.sh
tools/FIRE/FIRE_DATA/HUMAN/: releasenotes.txt
tools/FIRE/FIRE_DATA/KMERFILES/: 3mers_dna.txt  3mers_rna.txt  4mers_dna.txt  4mers_rna.txt  5mers_dna.txt  5mers_rna.txt  6mers_dna.txt  7mers_dna.txt  8mers_dna.txt
tools/FIRE/FIRE_DATA/SPECIES_DATA/: arabidopsis  bayanus  bayanushigh  bayanusmid  calbicans  chicken  ciona  drosophila  ecoli_tu  human  malaria  mouse  pombe  rat  worm  yeast  yoelii
tools/FIRE/MORESCRIPTS/: FIRE_combine_binary_expfile_with_expression_file.pl  FIRE_combine_two_expfiles.pl  FIRE_combine_two_expfiles_AND.pl  FIRE_count_genes_in_clusters_where_overrep.pl  FIRE_count_genes_in_given_clusters.pl  FIRE_crossvalidate.pl  FIRE_find_genes_with_GO_annotation.pl  FIRE_multithreshold_quantize.pl  FIRE_show_num_pos_and_downfold.pl  FIRE_show_pos_motifs_in_given_clusters.pl  FIRE_show_pos_motifs_in_overrep.pl  FIRE_show_which_genes_have_a_motif.pl  FIRE_show_which_genes_have_motif_continuous.pl  FIRE_threshold_quantize.pl  FIRE_threshold_quantize_low_high.pl  GO_OBO_get_parents.pl  GO_gene_association2index.pl  analyze_test_minr.pl  calc_distance_distribution.pl  cell_line_profile_generator_pearson.pl  cluster_motifs_from_multiple_fire_runs.pl  clusters_run_alignace.pl  combine_dna_rna_motif_files.pl  combine_eps_files.pl  combine_expression_vectors.pl  combine_multiple_fire_runs.pl  compare_two_lists_of_motifs.pl  compare_two_lists_of_motifs_simple.pl  count_fraction_active_nonactive.pl  count_genes_with_motifs_from_profiles.pl  count_seeds_in_tissue_results.pl  create_target_sets.pl  detect_homologous_sequences_isolated.pl  do_all_create_web_report.pl  doclust.pl  draw_mi_matrix.pl  draw_weblogos.pl  evaluate_motifs_conservation_control.pl  evaluate_prediction_accuracy.pl  filter_small_clusters.pl  (+33 more)
tools/FIRE/PROGRAMS/: Makefile  Makefile.am  Makefile.in  MyCompareAce.c  beta.c  beta.h  binom_test_greater.c  config.h  config.h.in  d1mach.c  dataio.c  dataio.h  genregexp.c  i1mach.c  information.c  information.h  mi_combine.c  mi_dist.c  mi_find.c  mi_library.c  mi_library.h  mi_motif_compare.c  mi_optimize.c  mi_optimize_motif_WM.c  mi_optimize_slow.c  mi_signif.c  myhypergeom.c  prefix.c  prefix.h  rcode.h  recompare.c  regexp.c  regexp.h  sequences.c  sequences.h  stamp-h1  statistics.c  statistics.h
tools/FIRE/PROGRAMS/.deps/: MyCompareAce.Po  beta.Po  binom_test_greater.Po  d1mach.Po  dataio.Po  genregexp.Po  i1mach.Po  information.Po  mi_combine.Po  mi_dist.Po  mi_find.Po  mi_library.Po  mi_motif_compare.Po  mi_optimize.Po  mi_optimize_motif_WM.Po  mi_optimize_slow.Po  mi_signif.Po  myhypergeom.Po  prefix.Po  recompare.Po  regexp.Po  sequences.Po  statistics.Po  toms708.Po
tools/FIRE/PROGRAMS/pcre-7.4/: Makefile  Makefile.in  config.h  config.status  configure  libpcre.pc  libpcrecpp.pc  libtool  pcre-config  pcre_scanner_unittest  pcredemo  (+4 more)
tools/FIRE/SCRIPTS/: AggloClust.pm  Bayes.pm  Fasta.pm  Fire.pm  GroupEnrichment.pm  GroupEnrichment.pm.bak  GroupEnrichment.pm.tmpl  Makefile  Makefile.am  Makefile.in  MyBlast.pm  PBS.pm  Sequence.pm  Sets.pm  Subs.pm  Table.pm  annotate_motifs_using_ace_library.pl  annotate_motifs_using_micrornas.pl  cat_ifexist.pl  clusters_go_enrichment.pl  combine_gapped_motifs.pl  combine_signif_files.pl  copy_seeds_to_optim.pl  count_lines.pl  determine_motif_overlaps.pl  download_dataset.pl  draw_position_histogram.pl  evaluate_motifs_conservation.pl  generate_motif_occurrence_summary.pl  generate_motif_profiles.pl  get_motif_targets.pl  intersect_expression_vectors.pl  makeGroupEnrichmentFromTemplate.pl  mi_cluster_motifs.pl  mi_create_dist_pvalues.pl  mi_create_overep_expfile.pl  mi_draw_all_pair_motif_maps.pl  mi_draw_interaction_matrix.pl  mi_draw_matrix.pl  mi_draw_motif_map.pl  (+7 more)
tools/FIRE/TOOLS/: FIRE_analyse_input_files.pl  FIRE_retain_unique_sequences_in_fasta_file.pl  detect_homologous_sequences.pl  draw_clusters_and_motifs.pl
(+5125 files in other folders)
